fix: return access + refresh tokens instead of only access
